2001-05-01  Mike Coleman  <mkc@mathdogs.com>
	* test/oggtail.py: new script to show off some of ogg module
	
	* src/pyogg*.c: methods with no args now check that they're called
	this way

	* src/pyogg*.c: add repr functions

	* src/pyogg*.c: add type checking for PyTypeObject function table
	
	* src/pyoggpacket.c: add get/set granulepos attribute
	* src/pyoggpage.c: add set pageno attribute

	* src/pyoggstreamstate.c: implement pagein, packetout methods
	
	* src/pyoggsyncstate.c: implement bytesin, pageseek methods,
	comment out unneeded wrote method

	* src/pyogg*state.c: fix free of bogus pointer in dealloc
	
	
3-27-2001 Andrew H. Chatham <andrew.chatham@duke.edu>
	* src/_oggmodule.c: Added OggSyncState

	* src/pyoggpage.c: Added _continued, _bos, _granulepos

	* src/pyoggstreamstate.c: Added _clear

	* src/pyoggsyncstate.c: Added _pageseek, _clear and constructor
	
3-17-2001 Andrew H. Chatham <andrew.chatham@duke.edu>
	* src/_oggmodule.c: Remove dependency on Vorbis

	* src/pyoggpackbuff.c: More PackBuff methods

	* src/pyoggsyncstate.c: Simple SyncState methods.

	* src/pyoggpack.c: Removed

	* src/_oggmodule.c: Added ability to create OggPackBuff object
	
1-17-2001 Andrew H. Chatham <andrew.chatham@duke.edu>
	* src/audiofilemodule.c
	  src/audioread.c
	  src/audioread.h
	  src/pyvorbiscodec.c
	  src/pyvorbiscodec.h
	  src/pyvorbisfile.c
	  src/pyvorbisfile.h
	  src/pyvorbisinfo.c
	  src/pyvorbisinfo.h
	  src/vorbismodule.c
	  src/vorbismodule.h
	  src/wavread.c
	  src/wavread.h: Removed

	* config_unix.py : Added
	  setup.py : Take advantage of config_unix.py and only build ogg module

	* include/pyogg.h: Added 
	
	* src/_oggmodule.c (init_ogg): Changed to use new pyogg.h
	
11-29-2000 Andrew H. Chatham <andrew.chatham@duke.edu>
	* test/ogg123.py: Added support for linuxaudiodev. Factored parts
	of Player class into a superclass and made separate AOPlayer and
	LADPlayer subclasses.

	* test/short.py: added
	